--- a/app/src/main/res/layout/fragment_course.xml
+++ b/app/src/main/res/layout/fragment_course.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Courses.Course.Course"
-    android:background="#EFEFEF">
+    android:background="#E6F1F0"
+    tools:context=".ui.Courses.Course.Course">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -36,116 +36,188 @@
                 app:titleMarginStart="62dp"
 
                 />
+
             <ImageButton
                 android:id="@+id/profileBackButton"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_arrove_back"
+                android:layout_marginStart="18dp"
                 android:background="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_arrove_back"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="18dp"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <VideoView
-        android:id="@+id/courseVideo"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="193dp"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="158dp"
-        app:layout_constraintTop_toBottomOf="@id/courseVideo"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:layout_marginTop="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:text="Tezkor manbalar"
-            android:textColor="@color/black"
-            android:fontFamily="@font/source_sans_pro_extralight"
-            android:letterSpacing="0.03"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="5dp"/>
-
-        <androidx.core.widget.NestedScrollView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="96dp"
-            android:layout_marginTop="10dp"
-            >
-            <LinearLayout
+            android:layout_height="wrap_content">
+
+            <VideoView
+                android:id="@+id/courseVideo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:backgroundTint="@color/transparent"
-                android:fontFamily="@font/source_sans_pro_extralight"
-                android:text="Resurslar"
-                android:textSize="11sp"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/ic_resource"
-                app:iconGravity="textTop"
-                android:textColor="@color/black"
-                android:letterSpacing="0.03"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:backgroundTint="@color/transparent"
-                android:fontFamily="@font/source_sans_pro_extralight"
-                android:text="Vazifalar"
-                android:textSize="11sp"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/ic_vazifalar_24"
-                app:iconGravity="textTop"
-                android:textColor="@color/black"
-                android:letterSpacing="0.03"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:backgroundTint="@color/transparent"
-                android:fontFamily="@font/source_sans_pro_extralight"
-                android:text="Testlar"
-                android:textSize="11sp"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/ic_test_24"
-                app:iconGravity="textTop"
-                android:textColor="@color/black"
-                android:letterSpacing="0.03"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:backgroundTint="@color/transparent"
-                android:fontFamily="@font/source_sans_pro_extralight"
-                android:text="Savollar"
-                android:textSize="11sp"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/ic_savollar_24"
-                app:iconGravity="textTop"
-                android:textColor="@color/black"
-                android:letterSpacing="0.03"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                android:layout_height="193dp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/layoutManba"
+                android:layout_width="match_parent"
+                android:layout_height="158dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/courseVideo">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/source_sans_pro_extralight"
+                    android:gravity="center"
+                    android:letterSpacing="0.03"
+                    android:text="Tezkor manbalar"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="96dp"
+                    android:layout_marginTop="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:backgroundTint="@color/transparent"
+                            android:fontFamily="@font/source_sans_pro_extralight"
+                            android:letterSpacing="0.03"
+                            android:text="Resurslar"
+                            android:textColor="@color/black"
+                            android:textSize="11sp"
+                            app:cornerRadius="10dp"
+                            app:icon="@drawable/ic_resource"
+                            app:iconGravity="textTop" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:backgroundTint="@color/transparent"
+                            android:fontFamily="@font/source_sans_pro_extralight"
+                            android:letterSpacing="0.03"
+                            android:text="Vazifalar"
+                            android:textColor="@color/black"
+                            android:textSize="11sp"
+                            app:cornerRadius="10dp"
+                            app:icon="@drawable/ic_vazifalar_24"
+                            app:iconGravity="textTop" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:backgroundTint="@color/transparent"
+                            android:fontFamily="@font/source_sans_pro_extralight"
+                            android:letterSpacing="0.03"
+                            android:text="Testlar"
+                            android:textColor="@color/black"
+                            android:textSize="11sp"
+                            app:cornerRadius="10dp"
+                            app:icon="@drawable/ic_test_24"
+                            app:iconGravity="textTop" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:backgroundTint="@color/transparent"
+                            android:fontFamily="@font/source_sans_pro_extralight"
+                            android:letterSpacing="0.03"
+                            android:text="Savollar"
+                            android:textColor="@color/black"
+                            android:textSize="11sp"
+                            app:cornerRadius="10dp"
+                            app:icon="@drawable/ic_savollar_24"
+                            app:iconGravity="textTop" />
+                    </LinearLayout>
+
+                </androidx.core.widget.NestedScrollView>
             </LinearLayout>
 
-        </androidx.core.widget.NestedScrollView>
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:orientation="vertical"
+                android:paddingHorizontal="18dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layoutManba"
+                android:layout_marginTop="10dp">
 
+                <TextView
+                    android:id="@+id/titleText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/source_sans_pro_semi_bold"
+                    android:letterSpacing="0.02"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    tools:text="Lorem ipsum dolor sit" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/source_sans_pro_extralight"
+                    android:letterSpacing="0.02"
+                    android:layout_marginVertical="10dp"
+                    android:maxLength="300"
+                    android:text="Lorem ipsum dolor sit amet consectetur ameturLorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="251dp"
+                    android:layout_marginVertical="5dp"
+                    android:scaleType="fitXY"
+                    tools:src="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="foto: link.domen"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris diam dignissim nisi eu, vel eros, ipsum, mi posuere. Quam mi adipiscing ut faucibus dui a erat. A vel faucibus netus lectus ut sed diam. Amet tellus, sapien enim dictum semper. Faucibus purus in adipiscing pellentesque. Nec proin phasellus lacus, netus nulla egestas."
+                    android:textSize="16sp"
+                    android:fontFamily="@font/source_sans_pro_extralight"
+                    android:layout_marginVertical="10dp"/>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
