--- a/app/src/main/res/layout/fragment_course.xml
+++ b/app/src/main/res/layout/fragment_course.xml
@@ -93,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="96dp"
                     android:layout_marginTop="10dp"
-                    android:scrollbars="horizontal">
+                    android:scrollbarStyle="">
 
                     <LinearLayout
                         android:layout_width="match_parent"
