--- a/app/src/main/res/layout/item_recycler_tasks.xml
+++ b/app/src/main/res/layout/item_recycler_tasks.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="168dp"
-        android:background="#1B6BA8"
+        android:backgroundTint="@color/purple_500"
         app:cardCornerRadius="20dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
+            android:layout_marginStart="20dp"
             android:text="Illustratsiya chizish"
             app:layout_constraintTop_toBottomOf="@id/cardView"/>
 
