--- a/app/src/main/res/layout/recommended_item.xml
+++ b/app/src/main/res/layout/recommended_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/levelCourse"
+        android:id="@+id/levelCourseCourse"
         android:layout_width="83dp"
         android:layout_height="33dp"
         android:layout_marginStart="10dp"
@@ -48,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/nameCource"
+        android:id="@+id/nameCourceCourse"
         android:layout_width="167dp"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
@@ -60,7 +59,7 @@
         tools:text="Ingiliz tili(Beginner)" />
 
     <TextView
-        android:id="@+id/textCource"
+        android:id="@+id/textCourceCourse"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
@@ -68,24 +67,25 @@
         android:fontFamily="@font/source_sans_pro_extralight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameCource"
+        app:layout_constraintTop_toBottomOf="@id/nameCourceCourse"
+        android:textColor="#99000000"
         tools:text="@string/text_courses" />
 
     <TextView
-        android:id="@+id/price"
+        android:id="@+id/priceCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textCource"
+        app:layout_constraintTop_toBottomOf="@id/textCourceCourse"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="199.000 so'm"
         android:fontFamily="@font/source_sans_pro_semi_bold"
         android:layout_marginBottom="15dp"/>
 
     <TextView
-        android:id="@+id/discount"
+        android:id="@+id/discountCourse"
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_margin="5dp"
