--- a/app/src/main/res/layout/item_courses_my_course.xml
+++ b/app/src/main/res/layout/item_courses_my_course.xml
@@ -8,7 +8,7 @@
     android:paddingEnd="18dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:background="@color/white">
+    android:background="@drawable/bakcground_card">
     <TextView
         android:id="@+id/nameMyCourse"
         android:layout_width="159dp"
