--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Rating.Rating"
-    android:background="#EFEFEF">
+    android:background="#E6F1F0">
 
     <!--Toolbar -->
     <com.google.android.material.appbar.AppBarLayout
