--- a/app/src/main/res/layout/item_rating_header.xml
+++ b/app/src/main/res/layout/item_rating_header.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="15dp"
         android:fontFamily="@font/source_sans_pro_extralight"
-
+        android:textColor="@color/black"
         />
     <TextView
         android:layout_width="90dp"
@@ -22,22 +22,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="153dp"
+        android:layout_marginStart="113dp"
         android:textSize="16sp"
         android:text="Ism Familiya"
         android:fontFamily="@font/source_sans_pro_extralight"
+        android:textColor="@color/black"
         />
-    
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="276dp"
+        android:layout_marginEnd="15dp"
+        android:fontFamily="@font/source_sans_pro_extralight"
         android:text="O'qiyotgan kurs"
         android:textSize="16sp"
-        android:fontFamily="@font/source_sans_pro_extralight"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="276dp"
+        android:textColor="@color/black"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
