--- a/app/src/main/res/layout/item_recycler_tasks.xml
+++ b/app/src/main/res/layout/item_recycler_tasks.xml
@@ -1,28 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="267dp"
+    android:layout_height="168dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/card_background">
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="168dp"
-        android:backgroundTint="@color/purple_500"
-        app:cardCornerRadius="20dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="69dp"
+        android:layout_height="69dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_image_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="20dp"
-            android:text="Illustratsiya chizish"
-            app:layout_constraintTop_toBottomOf="@id/cardView"/>
+    <TextView
+        android:id="@+id/taskNameTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Illustratsiya chizish"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/taskComplate"
+        app:layout_constraintStart_toStartOf="@id/taskComplate"
+        android:textColor="@color/white"/>
 
+    <TextView
+        android:id="@+id/taskComplate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="3/4 ta"
+        android:textColor="#E9ECFF"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
 
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
